--- a/forms-vue2/package.json
+++ b/forms-vue2/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "vee-validate": "^2.1.0-beta.11",
     "vue": "^2.5.11"
   },
   "browserslist": [
